--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blockchain",
+  "name": "blockchain-market",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@walletconnect/web3-provider": "^1.8.0",
-    "@web3auth/web3auth": "^2.0.2",
-    "ethers": "^5.7.0",
-    "magic-sdk": "^9.0.0",
-    "moment": "^2.29.4",
-    "moralis": "^2.2.0",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
-    "react-moralis": "^1.4.1",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "@web3auth/web3auth": "^0.6.2",
+    "ethers": "^5.6.1",
+    "magic-sdk": "^8.1.0",
+    "moment": "^2.29.1",
+    "moralis": "^1.5.5",
+    "moralis-v1": "^1.11.0",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-moralis": "^1.3.4",
     "react-simple-hook-modal": "^1.1.0",
-    "react-spinners": "^0.13.4",
-    "web3uikit": "^1.0.4"
+    "react-spinners": "^0.11.0",
+    "web3uikit": "^0.1.110"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "autoprefixer": "^10.4.4",
+    "eslint": "8.11.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
